--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ Zaragoza envió más tarde otro telegrama en el que dijo que los franceses habí
 El 21 de mayo de 1862 el presidente Juárez publicó el decreto de condecoración a los vencedores de las batallas del 28 de abril en las Cumbres de Acultzingo y del 5 de mayo en Puebla, y ambas se consideraron victorias ante el ejército expedicionario francés.
 El 30 de mayo se entregaron a los miembros del Ejército de Oriente los "diplomas de Concurrencia" a las mismas batallas, según lo estipulado en el artículo cuarto del mencionado decreto.
 El 29 de noviembre Juárez viajó, acompañado por sus ministros de Guerra, Miguel Blanco Múzquiz, y de Relaciones Exteriores y Gobernación, Juan Antonio de la Fuente, a Puebla para una serie de ceremonias y reconocimientos a los defensores de la ciudad. Se reunió con González Ortega, y finalmente, el 4 de diciembre, en medio de una gran ceremonia en el Fuerte de Guadalupe, hizo entrega formal de las medallas a los vencedores de las batallas del 28 de abril y del 5 de mayo de ese año, y partió al día siguiente a la Ciudad de México. <br>
-<img src="imagenes/330px-Decreto_de_Condecoración_a_los_vencedores_de_las_batallas_del_28_de_Abril_y_5_de_Mayo_de_1862.jpg" width="40%" height="40%"> <img src="imagenes/Nacional0505imgDesfilePuebla.jpg" width="40%" height="40%"> </div>
+<img src="imagenes/imagen1.jpg" width="40%" height="40%"> <img src="imagenes/Nacional0505imgDesfilePuebla.jpg" width="40%" height="40%"> </div>
 </div>
 <div data-role="footer" data-theme="a">
 <h4>Aplicacion Dos, Alexis Antonio Medina Perez</h4>
